// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-band> Component Basic usage 1`] = `
<bolt-band tag="div"
           size="medium"
           theme="dark"
           full-bleed
>
  <div class="c-bolt-band c-bolt-band--medium t-bolt-dark c-bolt-band--full-bleed">
    <div class="c-bolt-band__content">
      <bolt-wrapper size="xxlarge"
                    full="true"
                    bolt-object
      >
        <div class="o-bolt-wrapper o-bolt-wrapper--xxlarge o-bolt-wrapper--full">
          This is a band.
        </div>
      </bolt-wrapper>
    </div>
  </div>
</bolt-band>
`;

exports[`<bolt-band> Component Size of the band: large 1`] = `
<bolt-band tag="div"
           size="large"
           theme="dark"
           full-bleed
>
  <div class="c-bolt-band c-bolt-band--large t-bolt-dark c-bolt-band--full-bleed">
    <div class="c-bolt-band__content">
      <bolt-wrapper size="xxlarge"
                    full="true"
                    bolt-object
      >
        <div class="o-bolt-wrapper o-bolt-wrapper--xxlarge o-bolt-wrapper--full">
          This is a band.
        </div>
      </bolt-wrapper>
    </div>
  </div>
</bolt-band>
`;

exports[`<bolt-band> Component Size of the band: medium 1`] = `
<bolt-band tag="div"
           size="medium"
           theme="dark"
           full-bleed
>
  <div class="c-bolt-band c-bolt-band--medium t-bolt-dark c-bolt-band--full-bleed">
    <div class="c-bolt-band__content">
      <bolt-wrapper size="xxlarge"
                    full="true"
                    bolt-object
      >
        <div class="o-bolt-wrapper o-bolt-wrapper--xxlarge o-bolt-wrapper--full">
          This is a band.
        </div>
      </bolt-wrapper>
    </div>
  </div>
</bolt-band>
`;

exports[`<bolt-band> Component Size of the band: none 1`] = `
<bolt-band tag="div"
           size="none"
           theme="dark"
           full-bleed
>
  <div class="c-bolt-band t-bolt-dark c-bolt-band--full-bleed">
    <div class="c-bolt-band__content">
      <bolt-wrapper size="xxlarge"
                    full="true"
                    bolt-object
      >
        <div class="o-bolt-wrapper o-bolt-wrapper--xxlarge o-bolt-wrapper--full">
          This is a band.
        </div>
      </bolt-wrapper>
    </div>
  </div>
</bolt-band>
`;

exports[`<bolt-band> Component Size of the band: small 1`] = `
<bolt-band tag="div"
           size="small"
           theme="dark"
           full-bleed
>
  <div class="c-bolt-band c-bolt-band--small t-bolt-dark c-bolt-band--full-bleed">
    <div class="c-bolt-band__content">
      <bolt-wrapper size="xxlarge"
                    full="true"
                    bolt-object
      >
        <div class="o-bolt-wrapper o-bolt-wrapper--xxlarge o-bolt-wrapper--full">
          This is a band.
        </div>
      </bolt-wrapper>
    </div>
  </div>
</bolt-band>
`;

exports[`<bolt-band> Component Size of the band: xsmall 1`] = `
<bolt-band tag="div"
           size="xsmall"
           theme="dark"
           full-bleed
>
  <div class="c-bolt-band c-bolt-band--xsmall t-bolt-dark c-bolt-band--full-bleed">
    <div class="c-bolt-band__content">
      <bolt-wrapper size="xxlarge"
                    full="true"
                    bolt-object
      >
        <div class="o-bolt-wrapper o-bolt-wrapper--xxlarge o-bolt-wrapper--full">
          This is a band.
        </div>
      </bolt-wrapper>
    </div>
  </div>
</bolt-band>
`;

exports[`<bolt-band> Component Theme of the band: dark 1`] = `
<bolt-band tag="div"
           size="medium"
           theme="dark"
           full-bleed
>
  <div class="c-bolt-band c-bolt-band--medium t-bolt-dark c-bolt-band--full-bleed">
    <div class="c-bolt-band__content">
      <bolt-wrapper size="xxlarge"
                    full="true"
                    bolt-object
      >
        <div class="o-bolt-wrapper o-bolt-wrapper--xxlarge o-bolt-wrapper--full">
          This is a band.
        </div>
      </bolt-wrapper>
    </div>
  </div>
</bolt-band>
`;

exports[`<bolt-band> Component Theme of the band: light 1`] = `
<bolt-band tag="div"
           size="medium"
           theme="light"
           full-bleed
>
  <div class="c-bolt-band c-bolt-band--medium t-bolt-light c-bolt-band--full-bleed">
    <div class="c-bolt-band__content">
      <bolt-wrapper size="xxlarge"
                    full="true"
                    bolt-object
      >
        <div class="o-bolt-wrapper o-bolt-wrapper--xxlarge o-bolt-wrapper--full">
          This is a band.
        </div>
      </bolt-wrapper>
    </div>
  </div>
</bolt-band>
`;

exports[`<bolt-band> Component Theme of the band: none 1`] = `
<bolt-band tag="div"
           size="medium"
           theme="none"
           full-bleed
>
  <div class="c-bolt-band c-bolt-band--medium c-bolt-band--full-bleed">
    <div class="c-bolt-band__content">
      <bolt-wrapper size="xxlarge"
                    full="true"
                    bolt-object
      >
        <div class="o-bolt-wrapper o-bolt-wrapper--xxlarge o-bolt-wrapper--full">
          This is a band.
        </div>
      </bolt-wrapper>
    </div>
  </div>
</bolt-band>
`;

exports[`<bolt-band> Component Theme of the band: xdark 1`] = `
<bolt-band tag="div"
           size="medium"
           theme="xdark"
           full-bleed
>
  <div class="c-bolt-band c-bolt-band--medium t-bolt-xdark c-bolt-band--full-bleed">
    <div class="c-bolt-band__content">
      <bolt-wrapper size="xxlarge"
                    full="true"
                    bolt-object
      >
        <div class="o-bolt-wrapper o-bolt-wrapper--xxlarge o-bolt-wrapper--full">
          This is a band.
        </div>
      </bolt-wrapper>
    </div>
  </div>
</bolt-band>
`;

exports[`<bolt-band> Component Theme of the band: xlight 1`] = `
<bolt-band tag="div"
           size="medium"
           theme="xlight"
           full-bleed
>
  <div class="c-bolt-band c-bolt-band--medium t-bolt-xlight c-bolt-band--full-bleed">
    <div class="c-bolt-band__content">
      <bolt-wrapper size="xxlarge"
                    full="true"
                    bolt-object
      >
        <div class="o-bolt-wrapper o-bolt-wrapper--xxlarge o-bolt-wrapper--full">
          This is a band.
        </div>
      </bolt-wrapper>
    </div>
  </div>
</bolt-band>
`;
